# swhBlockchain

./: .gitignore  Makefile  gen_certs.sh  openssl.cnf  swh.proto  swhBlockchain.md
swhClient/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package.json
swhClient/src/: db.rs  lib.rs  main.rs  security.rs  signer.rs
swhServer/: gen_proto.sh  go.mod  main.go
swhServer/proto/: swh.pb.go  swh_grpc.pb.go
swhServer/verifier/: verifier.go
